# cosc292a1

./: CMakeLists.txt  q1.c  q5.c  q6.c
mantie7553udey4948/: CMakeLists.txt  program.c  q1.c  q1.h  q2.c  q2.h  q3.c  q4.c  q5.c  q6.c
