cmake_minimum_required(VERSION 4.1)
project(cosc292a1)

set(CMAKE_CXX_STANDARD 14)

add_executable(cosc292a1
        mantie7553udey4948/cmake-build-debug/Testing/Temporary/LastTest.log
        mantie7553udey4948/cmake-build-debug/build.ninja
        mantie7553udey4948/cmake-build-debug/cmake_install.cmake
        mantie7553udey4948/cmake-build-debug/CMakeCache.txt
        mantie7553udey4948/cmake-build-debug/compile_commands.json
        mantie7553udey4948/cmake-build-debug/mantie7553udey4948.exe
        mantie7553udey4948/CMakeLists.txt
        mantie7553udey4948/program.c
        mantie7553udey4948/q1.c)
